--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -72,9 +72,15 @@
 					</a>
 					<div class="collapse" id="warehouse">
 						<ul class="nav nav-collapse">
+							
+								<li>
+										<a href="/warehouse/incoming-shiptment">
+											<span class="sub-item">Incoming Shipment</span>
+										</a>
+									</li>
 								<li>
 										<a href="/warehouse/fll-new-package">
-											<span class="sub-item">Package Check-in FLL</span>
+											<span class="sub-item">Carrier Packages </span>
 										</a>
 									</li>
 									<li>
@@ -82,21 +88,27 @@
 											<span class="sub-item">No Docs</span>
 										</a>
 									</li>
+									<li>
+									<a href="/warehouse/packages-on-hand">
+										<span class="sub-item">Packages on Hands</span>
+									</a>
+								</li>
 							<li>
 								<a href="/warehouse/list-manifest">
-									<span class="sub-item">Air Cargo</span>
+									<span class="sub-item">Load Flight</span>
 								</a>
 							</li>
 							<li>
-								<a href="/warehouse/list-hazmat">
-									<span class="sub-item">Hamzat</span>
+								<a href="/warehouse/list-manifest">
+									<span class="sub-item">Reports</span>
 								</a>
 							</li>
-							<li>
+					
+							<!-- <li>
 								<a href="/warehouse/processing">
 									<span class="sub-item">Bahamas Processing</span>
 								</a>
-							</li>
+							</li> -->
 							<!-- <li>
 								<a href="/warehouse/store-check-in">
 									<span class="sub-item">Store Check-in</span>
