--- a/views/shared/__template.ejs
+++ b/views/shared/__template.ejs
@@ -26,6 +26,7 @@
 	</script>
 	<link rel="stylesheet" href="/assets/css/bootstrap.min.css">
 	<link rel="stylesheet" href="/assets/css/atlantis.min.css">
+	<link rel="stylesheet" href="/assets/css/magnific-popup.css">
 	<link rel="stylesheet" href="/assets/css/demo.css">
 </head>
 
