--- a/views/pages/warehouse/no-docs.ejs
+++ b/views/pages/warehouse/no-docs.ejs
@@ -6,7 +6,7 @@
 <input type='hidden' id="mtype" value="default" />
         <div class='card'>
             <div class="card-header col-md-12">
-                <h3>No Docs</h3>
+                <h3><%=title%></h3>
             </div>
             <div class="card-body">
                 <ul class="nav nav-pills nav-primary" id="myTab" role="tablist">
