warehouse florida fixes

--- a/views/pages/warehouse/store-checkin.ejs
+++ b/views/pages/warehouse/store-checkin.ejs
@@ -14,10 +14,10 @@
                             </div>
                             <div class='form-group '>
                                 <label for="package">Scan Package</label>
-                                <input type='text' class='form-control' id='package' placeholder="Tracking #" />
+                                <input type='text' class='form-control' id='package' placeholder="Company Tracking #" />
                             </div>
                             <div class='form-group'>
-                                <button class='btn btn-primary'>Scan</button>
+                                <button class='btn btn-primary'>Store Package</button>
                             </div>
                         </div>
 
