--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -156,11 +156,21 @@
 					</a>
 					<div class="collapse" id="wnas">
 						<ul class="nav nav-collapse">
+								<li>
+										<a href="/warehouse/nas-no-docs">
+											<span class="sub-item">No Docs</span>
+										</a>
+									</li>
 							<li>
-								<a href="/users/locations">
+								<a href="/warehouse/rec-package-nas">
 									<span class="sub-item">Recieve Package</span>
 								</a>
 							</li>
+							<li>
+									<a href="/warehouse/nas-packages-wh">
+										<span class="sub-item">Packages on Hand</span>
+									</a>
+								</li>
 							<!-- <li>
 								<a href="#">
 									<span class="sub-item">Checkout</span>
@@ -173,7 +183,7 @@
 							</li> -->
 
 							<li>
-								<a href="/users/add-locations">
+								<a href="/warehouse/deliveries">
 									<span class="sub-item">Delivery</span>
 								</a>
 							</li>
@@ -211,7 +221,7 @@
 					<div class="collapse" id="stores">
 						<ul class="nav nav-collapse">
 							<li>
-								<a href="/users/locations">
+								<a href="/warehouse/store-packages">
 									<span class="sub-item">Package On Hand</span>
 								</a>
 							</li>
