--- a/views/shared/__main_header.ejs
+++ b/views/shared/__main_header.ejs
@@ -45,7 +45,7 @@
 						<i class="fa fa-search"></i>
 					</a>
 				</li>
-				<li class="nav-item dropdown hidden-caret">
+				<!-- <li class="nav-item dropdown hidden-caret">
 					<a class="nav-link dropdown-toggle" href="#" id="messageDropdown" role="button"
 						data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 						<i class="fa fa-envelope"></i>
@@ -116,8 +116,8 @@
 									class="fa fa-angle-right"></i> </a>
 						</li>
 					</ul>
-				</li>
-				<li class="nav-item dropdown hidden-caret">
+				</li> -->
+				<!-- <li class="nav-item dropdown hidden-caret">
 					<a class="nav-link dropdown-toggle" href="#" id="notifDropdown" role="button" data-toggle="dropdown"
 						aria-haspopup="true" aria-expanded="false">
 						<i class="fa fa-bell"></i>
@@ -237,7 +237,7 @@
 					<a href="#" class="nav-link quick-sidebar-toggler">
 						<i class="fa fa-th"></i>
 					</a>
-				</li>
+				</li> -->
 			</ul>
 		</div>
 	</nav>
