--- a/views/pages/warehouse/fll-add-package.ejs
+++ b/views/pages/warehouse/fll-add-package.ejs
@@ -29,10 +29,10 @@
 
                                 <form method='post' id='cargoPackageForm'>
 
-                                    <div class='form-group'>
+                                    <!-- <div class='form-group'>
                                         <button type='button'  class="btn btn-small btn-info new-awb ">New AWB</button>
                                         
-                                    </div>
+                                    </div> -->
                                     <div class='form-group'>
                                             <label>AWB </label>
                                             <input type='text' class='form-control awb' id='id' name='id' required  readonly/>
