updated the nas warehouse tables

--- a/views/pages/warehouse/store-checkin.ejs
+++ b/views/pages/warehouse/store-checkin.ejs
@@ -25,7 +25,7 @@
                             <h3>Scanned Packages By Me</h3>
                             <table id='scannedPackages' class='table table-stripped'>
                                 <tr>
-                                    <th>Skybox</th>
+                                    <th>PMB</th>
                                     <th>Cusomter</th>
                                     <th>Tracking #</th>
                                     <th>Location </th>
