--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -184,7 +184,7 @@
 
 							<li>
 								<a href="/warehouse/deliveries">
-									<span class="sub-item">Delivery</span>
+									<span class="sub-item">Deliveries</span>
 								</a>
 							</li>
 							<li class="nav-item">
