--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,7 +35,7 @@
 				<h3 class="text-center">Sign In To Admin</h3>
 				<div class="login-form">
 					<div class="form-group">
-						<label for="username" class="placeholder"><b>Username</b></label>
+						<label for="username" class="placeholder"><b>Username </b></label>
 						<input id="username" placeholder="Username" name="username" type="text" class="form-control"
 							required>
 					</div>
@@ -50,13 +50,13 @@
 							</div>
 						</div>
 					</div>
+
 					<div class="form-group form-action-d-flex mb-3">
 						<!-- <div class="custom-control custom-checkbox">
 							<input type="checkbox" class="custom-control-input" id="rememberme">
 							<label class="custom-control-label m-0" for="rememberme">Remember Me</label>
 						</div> -->
-						<a href="#"
-							class="btn btn-secondary col-md-5 float-right mt-3 mt-sm-0 fw-bold login-button">Sign
+						<a href="#"		class="btn btn-secondary col-md-5 float-right mt-3 mt-sm-0 fw-bold login-button">Sign
 							In</a>
 					</div>
 				</div>
