--- a/views/pages/warehouse/deliveries.ejs
+++ b/views/pages/warehouse/deliveries.ejs
@@ -71,7 +71,28 @@
             </div>
         </div>
     </div>
-    
+    <div class="modal fade" id="close-delivery" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel2"
+    aria-hidden="true" style="display: none;">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2 class="modal-title" id="exampleModalLabel2">Close this Delivery</h2>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">×</span>
+                </button>
+            </div>
+            <div class="modal-body">
+              <div class='form-group'>
+                 <h3>Are you sure you want to close this delivery?</h3>
+              </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary close-modal" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-info save-delivery" id='rmPackage'>Close Delivery</button>
+            </div>
+        </div>
+    </div>
+</div>
 <script>
         var deliveries = <%- JSON.stringify(deliveries) %>;
     </script>
