Updated the invoices and other sections

--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -162,8 +162,13 @@
 										</a>
 									</li>
 							<li>
+								<a href="/warehouse/update-invoice">
+									<span class="sub-item">Update AWB Invoice</span>
+								</a>
+							</li>
+							<li>
 								<a href="/warehouse/rec-package-nas">
-									<span class="sub-item">Recieve Package</span>
+									<span class="sub-item">Recieve Packages</span>
 								</a>
 							</li>
 							<li>
