--- a/views/pages/warehouse/deliveries.ejs
+++ b/views/pages/warehouse/deliveries.ejs
@@ -62,6 +62,21 @@
                             <option value='<%=locations[i].id%>'><%=locations[i].name%></option>
                         <%}%>
                       </select>
+                      
+                  </div>
+                  <div class='form-group'>
+                      <label>Select Driver</label>
+                      <select class='select' style='height:55px;padding:13px;border:1px solid #ced4da ;display:block; width:100%;background: transparent;'>
+                        <option>Select Driver</option>
+                    </select>
+                    
+                  </div>
+                  <div class='form-group'>
+                      <label>Select Vehicle</label>
+                      <select class='select' style='height:55px;padding:13px;border:1px solid #ced4da ;display:block; width:100%;background: transparent;'>
+                        <option>Select Vehicle</option>
+                    </select>
+                    
                   </div>
                 </div>
                 <div class="modal-footer">
