--- a/views/pages/warehouse/invoice-update.ejs
+++ b/views/pages/warehouse/invoice-update.ejs
@@ -12,23 +12,23 @@
                       <input type="text" class="form-control" id="package" placeholder="Company Tracking #" />
                       
                     </div>
-                    <!-- <div class='form-group'>
+                    <div class='form-group'>
                         <label>Has Docs</label>
                         <input type='checkbox' class='form-control' style='width:40px;' >
                     </div>
                     <div class='form-group'>
                             <label>Invoice</label>
                             <input type='file' class='form-control'  >
-                        </div> -->
+                        </div>
                     <div class="form-group">
                     
                    
-                      <button class="btn btn-primary">Save</button>
+                      <button class="btn btn-primary">Update</button>
                     </div>
                    
                   </div>
-                  <div class='col-md-6'>
-                        <h3>Processing Packages (Scanned By Me)</h3>
+                  <!-- <div class='col-md-6'>
+                        <h3>Uploade Packages (Scanned By Me)</h3>
                         <table id="scannedPackages" class="table table-stripped">
                                 <tr>
                                   <th>PMB</th>
@@ -36,7 +36,7 @@
                                   <th>Tracking #</th>
                                 </tr>
                               </table>  
-                  </div>
+                  </div> -->
                 
                 </div>
               </div>
