--- a/views/pages/warehouse/store-checkin.ejs
+++ b/views/pages/warehouse/store-checkin.ejs
@@ -8,10 +8,10 @@
                 <div class="card-body">
                     <div class='row'>
                         <div class='col-md-3'>
-                            <div class='form-group '>
+                            <!-- <div class='form-group '>
                                 <label for="bin">Scan Bin/Shelf</label>
                                 <input type='text' class='form-control' id='bin' placeholder="Bin #" />
-                            </div>
+                            </div> -->
                             <div class='form-group '>
                                 <label for="package">Scan Package</label>
                                 <input type='text' class='form-control' id='package' placeholder="Company Tracking #" />
