--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -122,10 +122,15 @@
 											</a>
 										</li>
 										<li>
-											<a href="/fleet/flights">
+											<a href="/fleet/planes">
 												<span class="sub-item">Planes</span>
 											</a>
 										</li>
+										<li>
+												<a href="/fleet/pilots">
+													<span class="sub-item">Pilots</span>
+												</a>
+											</li>
 										<li>
 											<a href="/fleet/drivers">
 												<span class="sub-item">Drivers</span>
